--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.0.6",
     "expo": "~42.0.1",
+    "expo-checkbox": "^1.0.3",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "prop-types": "^15.7.2",
