--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ flutter:
     - family: Mulish
       fonts:
         - asset: assets/fonts/Mulish-Regular.ttf
+          weight: 400
         - asset: assets/fonts/Mulish-Bold.ttf
           weight: 700
 
