--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,8 +75,14 @@ flutter:
       fonts:
         - asset: assets/fonts/Mulish-Regular.ttf
           weight: 400
+        - asset: assets/fonts/Mulish-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Mulish-SemiBold.ttf
+          weight: 600
         - asset: assets/fonts/Mulish-Bold.ttf
           weight: 700
+        - asset: assets/fonts/Mulish-ExtraBold.ttf
+          weight: 800
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
